--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://osama:osama12901@movies.xdowv6s.mongodb.net/MoviesReservation?retryWrites=true&w=majority
+MONGO_URI='YOUR-MONGODB-URI'
 PORT=3000
